<resources>
    <string name="app_name">Mercury</string>
    <string name="mensagem">Mensagem</string>
    <string name="foto_de_perfil">Foto de Perfil</string>
    <string name="nome_de_contato">Nome de contato</string>
    <string name="info_button">info_button</string>
    <string name="type">Mensagem...</string>
    <string name="texte_de_mensagem">texte de mensagem</string>
    <string name="pesquisar">Pesquisar</string>
    <string name="profileimage">profileImage</string>
    <string name="login">Login</string>
    <string name="esqueceu_a_senha">Esqueceu a senha</string>
    <string name="or_login_with">Or login with</string>
    <string name="senha">Senha:</string>
    <string name="email">Email:</string>
    <string name="not_registered_yet">not Registered yet</string>
    <string name="conversas">Conversas</string>
    <string name="arquivados">Arquivados</string>
    <string name="signup">signup</string>



    <!-- Calls History Strings -->

    <string name="callsHeaderTitle">Histórico de Chamadas</string>


    <string name="earth_view_from_the_moon">Earth view from the moon</string>
    <string name="permanecer_conectado">Permanecer conectado</string>
    <string name="google_login_button">Google login button</string>
    <string name="github_login_button">github login button</string>
    <string name="timeskip">TImeSkip</string>
    <string name="nome">Nome:</string>
    <string name="timeskip2">TImeSkip</string>
    <string name="logo">TImeSkip</string>
    <string name="pesquisar2">Pesquisar...</string>
    <string name="sticker_icon">Sticker Icon</string>
    <string name="recentes">Recentes</string>
    <string name="signup_fragment">SignUp</string>
    <string name="lista_de_contatos">Lista de contatos</string>
</resources>