<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/chat"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/img_chat_bg"
    android:orientation="vertical">

    <View
        android:id="@id/view"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:background="#101010"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/blurview"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:background="#101010"
        android:clipToOutline="true"
        android:elevation="2dp"
        android:orientation="horizontal"
        android:padding="04dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/view">

        <ImageButton
            android:id="@+id/returnButton"
            android:layout_width="32dp"
            android:layout_height="42dp"

            android:background="@android:color/transparent"
            android:contentDescription="@string/foto_de_perfil"
            android:src="@drawable/ic_return" />

        <FrameLayout
            android:layout_width="42dp"
            android:layout_height="42dp">

            <ImageButton
                android:foreground="@drawable/ripple_circle"
                android:id="@+id/profile_photo"
                android:layout_width="42dp"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:background="@android:color/transparent"
                android:contentDescription="@string/foto_de_perfil"
                android:src="@drawable/ic_profile_picture" />

            <View
                android:id="@+id/status"
                android:visibility="gone"
                android:layout_width="14dp"
                android:layout_height="14dp"
                android:background="@drawable/ic_status"
                android:layout_gravity="end|bottom" />

        </FrameLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/nome_contato"
                android:layout_width="match_parent"
                android:singleLine="true"
                android:ellipsize="end"
                android:layout_height="wrap_content"
                android:paddingStart="8dp"
                android:text="@string/nome_de_contato"
                android:textColor="@color/white"
                android:textSize="18dp"
                tools:ignore="RtlSymmetry" />

            <TextView
                android:id="@+id/contactNumber"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:paddingStart="8dp"
                android:text="+55 75 98806-6952"
                android:textColor="#808080"
                android:textSize="12dp"
                tools:ignore="RtlSymmetry" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="104dp"
            android:layout_height="42dp">

            <ImageButton
                android:foreground="@drawable/ripple_circle"
                android:id="@+id/voice_call"
                android:layout_width="42dp"
                android:layout_height="42dp"
                android:background="@android:color/transparent"
                android:src="@drawable/ic_call" />

            <Space
                android:layout_width="12dp"
                android:layout_height="12dp" />

            <ImageButton
                android:foreground="@drawable/ripple_circle"
                android:id="@+id/video_call"
                android:layout_width="42dp"
                android:layout_height="42dp"
                android:background="@android:color/transparent"
                android:src="@drawable/ic_video_call" />

        </LinearLayout>

    </LinearLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/bottom_bar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:padding="04dp"
        android:layout_margin="04dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraintLayout3"
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:layout_marginEnd="04dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintEnd_toStartOf="@id/send"
            app:layout_constraintStart_toStartOf="parent">


            <EditText
                android:id="@+id/messageTextfield"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:background="@android:color/transparent"
                android:hint="@string/type"
                android:importantForAutofill="no"
                android:inputType="textMultiLine"
                android:interpolator="@android:anim/accelerate_decelerate_interpolator"
                android:paddingStart="16dp"
                android:scrollHorizontally="false"
                android:stateListAnimator="@animator/scale_animation"
                android:textColor="@color/white"
                android:textColorHint="#99ffffff"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <View
                android:layout_marginEnd="08dp"
                android:layout_marginStart="08dp"
                android:layout_width="match_parent"
                android:layout_height="06dp"
                android:elevation="4dp"
                android:background="@drawable/teste"
                app:layout_constraintBottom_toBottomOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <ImageButton
            app:layout_constraintHorizontal_weight="1"
            android:id="@+id/send"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:background="@drawable/bg_login_button"

            android:src="@drawable/ic_send"
            android:stateListAnimator="@animator/scale_animation"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_message"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_margin="08dp"
        app:layout_constraintBottom_toTopOf="@+id/bottom_bar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/blurview"
        tools:listitem="@layout/rv_03_msg_received" />

</androidx.constraintlayout.widget.ConstraintLayout>