<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/root"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#000000"
    android:orientation="vertical"
    tools:ignore="Typos">

    <LinearLayout
        android:id="@+id/fragment_container_view_tag"
        android:layout_width="match_parent"
        android:layout_height="944dp"
        android:layout_weight="1"
        android:orientation="vertical">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="94dp"
            android:background="#000000"
            android:orientation="horizontal"
            android:padding="08dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <FrameLayout
                android:layout_height="38dp"
                android:layout_width="38dp"
                app:layout_constraintBottom_toBottomOf="@id/text"
                app:layout_constraintEnd_toEndOf="parent"
                android:focusable="false"
                android:clickable="false"
                app:layout_constraintTop_toTopOf="@id/text">

                <ImageButton
                    android:id="@+id/git"
                    android:layout_width="38dp"
                    android:layout_height="38dp"
                    android:background="@android:color/transparent"
                    android:foreground="@drawable/ripple_circle"
                    android:src="@drawable/ic_git"
                    android:stateListAnimator="@animator/scale_animation2"
                    android:visibility="visible"
                    app:layout_constraintBottom_toBottomOf="@id/text"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="@id/text" />

                <TextView
                    android:text="1"
                    android:textAlignment="center"
                    android:gravity="center"
                    android:textSize="08sp"
                    android:layout_margin="06dp"
                    android:textColor="@color/white"
                    android:layout_width="wrap_content"
                    android:minWidth="12dp"
                    android:layout_height="12dp"
                    android:background="@drawable/git_notification"
                    android:layout_gravity="end|bottom">

                </TextView>

            </FrameLayout>

            <ImageButton
                android:id="@+id/trash"
                android:layout_width="38dp"
                android:layout_height="38dp"
                android:background="@android:color/transparent"
                android:foreground="@drawable/ripple_circle"
                android:src="@drawable/ic_trash"
                android:stateListAnimator="@animator/scale_animation2"
                android:visibility="gone"
                app:layout_constraintBottom_toBottomOf="@id/text"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@id/text" />

            <ImageButton
                android:id="@+id/option"
                android:layout_width="38dp"
                android:layout_height="38dp"
                android:layout_marginEnd="12dp"
                android:background="@android:color/transparent"
                android:foreground="@drawable/ripple_circle"
                android:src="@drawable/ic_archive"
                android:stateListAnimator="@animator/scale_animation2"
                android:visibility="gone"
                app:layout_constraintBottom_toBottomOf="@id/text"
                app:layout_constraintEnd_toStartOf="@id/trash"
                app:layout_constraintTop_toTopOf="@id/text" />

            <ImageButton
                android:id="@+id/close"
                android:layout_width="38dp"
                android:layout_height="38dp"
                android:layout_marginEnd="12dp"
                android:background="@android:color/transparent"
                android:foreground="@drawable/ripple_circle"
                android:src="@drawable/ic_close"
                android:stateListAnimator="@animator/scale_animation2"
                android:visibility="gone"
                app:layout_constraintBottom_toBottomOf="@id/text"
                app:layout_constraintEnd_toStartOf="@+id/option"
                app:layout_constraintTop_toTopOf="@id/text" />

            <ImageButton
                android:id="@+id/teste"
                android:layout_width="42dp"
                android:layout_height="42dp"
                android:background="@drawable/ic_profile_picture"
                android:contentDescription="@string/profileimage"
                android:visibility="gone"
                app:layout_constraintBottom_toBottomOf="@id/text"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@id/text" />

            <TextView
                android:id="@+id/text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:fontFamily="@font/nebula"
                android:paddingStart="04dp"
                android:layout_marginBottom="04dp"
                android:text="NEBULA"
                android:textColor="@color/white"
                android:textSize="30sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <LinearLayout
            android:id="@+id/fragmentContainer"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="vertical"

            tools:context=".Fragments.Fragment_03_AllChats" />

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="0.1dp"
        android:background="#151515" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:layout_gravity="bottom"
        android:gravity="center"
        android:orientation="horizontal">

        <LinearLayout
            android:id="@+id/button_inbox"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:clickable="true"
            android:focusable="true"
            android:gravity="center"
            android:orientation="vertical">

            <ImageButton
                android:id="@+id/inbox"
                android:layout_width="70dp"
                android:layout_height="38dp"
                android:background="@null"
                android:clickable="false"
                android:contentDescription="@string/profileimage"
                android:interpolator="@android:anim/accelerate_decelerate_interpolator"
                android:src="@drawable/ic_inbox"
                android:stateListAnimator="@animator/scale_animation" />

            <Space
                android:layout_width="08dp"
                android:layout_height="04dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:clickable="false"
                android:text="@string/conversas"
                android:textAlignment="center"
                android:textColor="@color/white">

            </TextView>

        </LinearLayout>


        <LinearLayout
            android:id="@+id/button_contact"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:clickable="true"
            android:focusable="true"
            android:gravity="center"
            android:orientation="vertical">

            <ImageButton
                android:id="@+id/contact"
                android:layout_width="68dp"
                android:layout_height="38dp"
                android:background="@null"
                android:clickable="false"
                android:contentDescription="@string/profileimage"
                android:interpolator="@android:anim/accelerate_decelerate_interpolator"
                android:src="@drawable/ic_contact_list"
                android:stateListAnimator="@animator/scale_animation" />

            <Space
                android:layout_width="08dp"
                android:layout_height="04dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:clickable="false"
                android:text="Contatos"
                android:textAlignment="center"
                android:textColor="@color/white">

            </TextView>
        </LinearLayout>


        <LinearLayout
            android:id="@+id/button_call"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:clickable="true"
            android:focusable="true"
            android:gravity="center"
            android:orientation="vertical">

            <ImageButton
                android:id="@+id/calls"
                android:layout_width="68dp"
                android:layout_height="38dp"
                android:background="@null"
                android:clickable="false"
                android:contentDescription="@string/profileimage"
                android:interpolator="@android:anim/accelerate_decelerate_interpolator"
                android:src="@drawable/ic_call"
                android:stateListAnimator="@animator/scale_animation" />

            <Space
                android:layout_width="08dp"
                android:layout_height="04dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:clickable="false"
                android:text="Ligações"
                android:textAlignment="center"
                android:textColor="@color/white">

            </TextView>


        </LinearLayout>

        <LinearLayout
            android:id="@+id/button_archived"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:clickable="true"
            android:focusable="true"
            android:gravity="center"
            android:orientation="vertical">

            <ImageButton
                android:id="@+id/archived"
                android:layout_width="68dp"
                android:layout_height="38dp"
                android:background="@null"
                android:clickable="false"
                android:contentDescription="@string/profileimage"
                android:interpolator="@android:anim/accelerate_decelerate_interpolator"
                android:src="@drawable/ic_archived"
                android:stateListAnimator="@animator/scale_animation" />

            <Space
                android:layout_width="08dp"
                android:layout_height="04dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:clickable="false"
                android:text="@string/arquivados"
                android:textAlignment="center"
                android:textColor="@color/white">

            </TextView>


        </LinearLayout>

    </LinearLayout>

</LinearLayout>